--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -49,21 +49,32 @@ form {
 }
 
 form div {
-  @apply mb-6 p-2 bg-white bg-opacity-5 rounded-md transition-all duration-200 hover:bg-opacity-10 hover:translate-y-[-2px];
+  @apply mb-2 p-2 bg-white bg-opacity-5 rounded-md transition-all duration-200 hover:bg-opacity-10 hover:translate-y-[-2px];
 
   /* Añadir sombra en modo claro */
-  @apply shadow-md; /* Agrega sombra en el modo claro */
+  @apply shadow-none; /* Agrega sombra en el modo claro */
 }
 
 /* Añadir sombra en el modo claro */
 body.light-theme form div {
-  @apply shadow-md; /* Asegura que se aplique la sombra */
+  @apply shadow-none; /* Asegura que se aplique la sombra */
 }
 
 /* Sombra en modo oscuro, manténlo como está */
 body.dark-theme form div {
   @apply shadow-none; /* Si prefieres quitar la sombra en el modo oscuro, puedes dejarlo así */
 }
+
+/* Estilo para div en tema claro */
+body.light-theme .custom-div {
+  @apply bg-[rgba(255,255,255,0.5)]; /* Fondo blanco semi-transparente en modo claro */
+}
+
+/* Estilo para div en tema oscuro (puedes modificarlo a tu gusto) */
+body.dark-theme .custom-div {
+  @apply bg-[rgba(0,0,0,0.7)]; /* Fondo oscuro semi-transparente en modo oscuro */
+}
+
 
 label {
   @apply text-base font-semibold mb-2 block tracking-wider;
